--- a/styles/main.scss
+++ b/styles/main.scss
@@ -328,3 +328,37 @@ table {
 	clip-path: path("M9 6L15 12L9 18M9 12H9.01");
 	right: 10px;
 }
+
+.github-corner{
+	position: fixed;
+	top: 0;
+	right: -40px;
+	width: 120px;
+	height: 120px;
+}
+
+.github-corner:hover .octo-arm {
+	animation: octocat-wave 560ms ease-in-out;
+}
+@keyframes octocat-wave {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	20%,
+	60% {
+		transform: rotate(-25deg);
+	}
+	40%,
+	80% {
+		transform: rotate(10deg);
+	}
+}
+@media (max-width: 500px) {
+	.github-corner:hover .octo-arm {
+		animation: none;
+	}
+	.github-corner .octo-arm {
+		animation: octocat-wave 560ms ease-in-out;
+	}
+}
