--- a/styles/main.scss
+++ b/styles/main.scss
@@ -362,3 +362,51 @@ table {
 		animation: octocat-wave 560ms ease-in-out;
 	}
 }
+
+a{
+	color: white;
+	font-weight: bold;
+
+	&:hover{
+		text-decoration: none;
+	}
+}
+
+
+.sidebar-toggle{
+	display: block;
+	width: 20px;
+	height: 20px;
+	background: white;
+	position: absolute;
+	left: 20px;
+	top: 10px;
+	border-radius: 15px;
+}
+
+@media only screen and (max-width: 700px){
+	.sidebar{
+		position: absolute;
+		left: calc(-1 * var(--sidebar-size));
+		height: calc(100dvh - var(--navbar-height));
+		top: var(--navbar-height);
+		z-index: 10;
+		transition: .2s;
+
+		.sidebar-toggle{
+			display: block;
+		}
+	}
+
+	body.sidebar-open .sidebar{
+		left: 0;
+	}
+
+	.navbar{
+		padding-left: 30px;
+	}
+
+	.main-view{
+		width: 100vw !important;
+	}
+}
