--- a/styles/main.scss
+++ b/styles/main.scss
@@ -374,7 +374,7 @@ a{
 
 
 .sidebar-toggle{
-	display: block;
+	display: none;
 	width: 20px;
 	height: 20px;
 	background: white;
@@ -392,10 +392,10 @@ a{
 		top: var(--navbar-height);
 		z-index: 10;
 		transition: .2s;
+	}
 
-		.sidebar-toggle{
-			display: block;
-		}
+	.sidebar-toggle{
+		display: block;
 	}
 
 	body.sidebar-open .sidebar{
